/*
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
*/

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pbft;

/*
 * mapping to PBFT paper names
 *
 * PBFT name: local name
 *
 * o: transaction
 * t: timestamp
 * c: client
 * v: view
 * n: sequenceNumber
 * D(m): requestDigest
 * i: replicaId
 */

message Message {
    oneof payload {
        Request request = 1;
        PrePrepare prePrepare = 2;
        Prepare prepare = 3;
        Commit commit = 4;
    }
}

message Request {
    google.protobuf.Timestamp timestamp = 1;
    bytes transaction = 2;    // opaque transaction passed in by stack
}

message PrePrepare {
    uint64 view = 1;
    uint64 sequenceNumber = 2;
    repeated bytes requestDigest = 3;
}

message Prepare {
    uint64 view = 1;
    uint64 sequenceNumber = 2;
    string requestDigest = 3;
    uint64 replicaId = 4;
}

message Commit {
    uint64 view = 1;
    uint64 sequenceNumber = 2;
    uint64 replicaId = 3;
}
